--- a/fr/html/guide/gui/gui-attrcomp.html
+++ b/fr/html/guide/gui/gui-attrcomp.html
@@ -41,7 +41,7 @@
         <img class="notscal" src="../../../../img-guide/gui-output.png" alt="#########">
       </p>
       <p>
-        En fait, les outils pin dans la barre d'outils par défaut sont deux instances de l'outil pins de la librairie de câblage avec des ensembles d'attributs différents. L'icône pour l'outil pin est représenté par un cercle ou un carré suivant la valeur de son attribut <b class="property">"Sortie ?"</b>
+        En fait, les outils broche dans la barre d'outils par défaut sont deux instances de l'outil pins de la librairie de câblage avec des ensembles d'attributs différents. L'icône pour l'outil broche est représenté par un cercle ou un carré suivant la valeur de son attribut <b class="property">"Sortie ?"</b>
       </p>
       <p>
         Logisim fourni des raccourcis pratique pour changer l'attribut d'apparence qui contrôle l'orientation dans laquelle se trouve la représentation du composant&nbsp;: presser une des touches <b class="tkeybd">flèchées</b> quand l'outil est sélectionné et cela va changer l'orientation du composant.
