--- a/fr/html/guide/subcirc/sub-appear.html
+++ b/fr/html/guide/subcirc/sub-appear.html
@@ -20,7 +20,7 @@
         Il existe quatre modèles de représentation graphique pour le circuit (Logisim-classique, Logisim-Holycross , Logisim-Evolution et Personalisé). La version de la présentation est sélectionnable dans la propriété <b class="property">Apparence</b> du circuit.
       </p>
       <p>
-        Dans l'apparence <b class="property">Logisim-Evolution</b> le sous-circuit est dessiné dans un rectangle noir avec le nom du circuit placé au sud. La dimension du dessin du circuit est adaptée au contenu si la propriété <b class="property">Taille de boîte fixe</b> est positionné sur non. Les entrées seront placées à l'est et les sorties à l'ouest selon l'ordre de leur apparition (de gauche à droite et de haut en bas) dans le schéma détaillé. L’ancrage étant au sommet de la pin nord-ouest.
+        Dans l'apparence <b class="property">Logisim-Evolution</b> le sous-circuit est dessiné dans un rectangle noir avec le nom du circuit placé au sud. La dimension du dessin du circuit est adaptée au contenu si la propriété <b class="property">Taille de boîte fixe</b> est positionné sur non. Les entrées seront placées à l'est et les sorties à l'ouest selon l'ordre de leur apparition (de gauche à droite et de haut en bas) dans le schéma détaillé. L’ancrage étant au sommet de la broche nord-ouest.
       </p>
       <p align="center">
         <img class="notscal" src="../../../../img-guide/subcirc-evolution-appear.png" alt="#########">
@@ -33,7 +33,7 @@
         <img class="notscal" src="../../../../img-guide/subcirc-holycross-appear.png" alt="#########">
       </p>
       <p>
-        Dans l'apparence <b class="property">Logisim-classique</b> le sous-circuit est dessiné dans un rectangle sans nom, sa dimension sera dépendante du nombre d'entrées et de sorties. Les entrées et les sorties seront positionnées sur les côtés nord, sud, est, ouest selon leur orientation et l'ordre de leur apparition (de gauche à droite et de haut en bas) dans le schéma détaillé. L’ancrage étant au sommet de la pin nord-ouest.
+        Dans l'apparence <b class="property">Logisim-classique</b> le sous-circuit est dessiné dans un rectangle sans nom, sa dimension sera dépendante du nombre d'entrées et de sorties. Les entrées et les sorties seront positionnées sur les côtés nord, sud, est, ouest selon leur orientation et l'ordre de leur apparition (de gauche à droite et de haut en bas) dans le schéma détaillé. L’ancrage étant au sommet de la broche nord-ouest.
       </p>
       <p align="center">
         <img class="notscal" src="../../../../img-guide/subcirc-classic-appear.png" alt="#########">
