--- a/fr/html/guide/tutorial/tutor-gates.html
+++ b/fr/html/guide/tutorial/tutor-gates.html
@@ -46,7 +46,7 @@
       </p>
       <p>
         Ensuite nous voulons ajouter les deux entrées <var>x</var> et <var>y</var> dans notre diagramme. Sélectionnez l'outil <b class="property">"Entrée"</b> (<img class="icontxt" src="../../../../icons/1616/toolpininput.png" alt="#########">), cet outil nous permet de placer les connecteurs (broche) d'entrées sur notre circuit. Vous devez également placer une broche de sortie à côté de la sortie de la porte logique OR en utilisant l'outil <b class="property">"Sortie"</b>.(<img class="icontxt" src=
-        "../../../../icons/1616/toolpinoutput.png" alt="#########">). De nouveau, je laisse un petit peu d'espace entre la porte OR et la pin de sortie, mais vous pouvez choisir de les coller l'un à l'autre.
+        "../../../../icons/1616/toolpinoutput.png" alt="#########">). De nouveau, je laisse un petit peu d'espace entre la porte OR et la broche de sortie, mais vous pouvez choisir de les coller l'un à l'autre.
       </p>
       <p align="center">
         <img src="../../../img-guide/tutorial-3-comps.png" alt="#########" >
