--- a/fr/html/libs/arith/bitadder.html
+++ b/fr/html/libs/arith/bitadder.html
@@ -55,7 +55,7 @@
         bits supérieurs, mais les deux bits inférieurs sont EE puisque les entiers entre 9 et 11 varient dans ces bits.
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
       <div class="attliste">
         <dl>
