--- a/fr/html/libs/arith/bitfinder.html
+++ b/fr/html/libs/arith/bitfinder.html
@@ -112,7 +112,7 @@
         bit d'ordre supérieur.
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
       <div class="attliste">
         <dl>
