--- a/fr/html/libs/arith/comparator.html
+++ b/fr/html/libs/arith/comparator.html
@@ -54,7 +54,7 @@
         La comparaison est effectuée en commençant par les bits les plus significatifs de chaque nombre et en descendant en parallèle jusqu'à ce qu'un emplacement soit trouvé où les deux valeurs sont en désaccord. Si, toutefois, une valeur d'erreur ou une valeur flottante est rencontrée au cours de cette descente, alors toutes les sorties correspondront à cette erreur ou à cette valeur flottante.
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
       <div class="attliste">
         <dl>
