--- a/fr/html/libs/arith/divider.html
+++ b/fr/html/libs/arith/divider.html
@@ -66,7 +66,7 @@
         Si l'un des opérandes contient des bits flottants ou des bits d'erreur, les sorties du composant seront soit entièrement flottantes, soit entièrement des valeurs d'erreur.
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
       <div class="attliste">
         <p>
