--- a/fr/html/libs/arith/fpcomparator.html
+++ b/fr/html/libs/arith/fpcomparator.html
@@ -51,7 +51,7 @@
         Ce composant compare deux valeurs à virgule flottante qui arrivent par les entrées ouest et présente trois signaux de sortie &gt; = &lt;. normalement, une seule de ces valeurs est à <b class="unov">1</b> si une erreur est détectée, toutes les sorties sont à <b class="zerov">0</b> et la sortie d'erreur au sud est à <b class="unov">1</b> si le composant reçoit un signal d'erreur (<b class="evalue">E</b>) ou non défini (<b class="uvalue">U</b>) ou les valeurs à virgule flottante <var>NaN<sub>f</sub></var>.
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
       <div class="attliste">
         <dl>
