--- a/fr/html/libs/arith/fpfptoint.html
+++ b/fr/html/libs/arith/fpfptoint.html
@@ -51,7 +51,7 @@
 	   Ce composant renvoie une valeur entière sur la sortie est, qui correspond à la valeur en virgule flottante, arrondie au nombre entier le plus proche, qu'il reçoit sur l'entrée ouest. Si la donnée d'entrée contiens des signaux non définis (<b class="uvalue">U</b>), d'erreur (<b class="evalue">E</b>) ou la valeur <var>NaN<sub>f</sub></var>, il émettra sur la sortie la valeur <var>NaN<sub>f</sub></var> et sur la sortie d'erreur au sud un <b class="unov">1</b>
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
 	  <div class="attliste">
       <dl>
