--- a/fr/html/libs/arith/multiplier.html
+++ b/fr/html/libs/arith/multiplier.html
@@ -58,7 +58,7 @@
         Si l'un des opérandes contient des bits flottants ou des bits d'erreur, le composant effectue une soustraction partielle. C'est-à-dire qu'il calculera autant de bits de poids faible que possible. Mais au-dessus du bit flottant ou d'erreur, le résultat aura des bits flottants ou d'erreur.
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
       <div class="attliste">
         <dl>
