--- a/fr/html/libs/arith/negator.html
+++ b/fr/html/libs/arith/negator.html
@@ -54,7 +54,7 @@
         Si la valeur à nier se trouve être la valeur la moins négative, alors sa négation qui ne peut pas être représentée sous forme de complément à deux, est toujours la valeur la moins négative.
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
       <div class="attliste">
         <dl>
