--- a/fr/html/libs/arith/shifter.html
+++ b/fr/html/libs/arith/shifter.html
@@ -71,7 +71,7 @@
         Notez que si <var>dist</var> contient des entrées flottantes ou d'erreur, alors la sortie est composée entièrement de valeurs d'erreur, puisqu'il n'y a aucun moyen de deviner de combien décaler l'entrée.
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
       <div class="attliste">
         <dl>
