--- a/fr/html/libs/gates/basic.html
+++ b/fr/html/libs/gates/basic.html
@@ -422,7 +422,7 @@
         Les versions multibits de chaque porte effectueront leur transformation un bit par bit sur leurs entrées.
       </p>
       <h2>
-        Pins (en supposant que le composant est orienté vers l'est)
+        Broches (en supposant que le composant est orienté vers l'est)
       </h2>
 	  <div class="attliste">
       <dl>
