--- a/fr/html/libs/gates/buffer.html
+++ b/fr/html/libs/gates/buffer.html
@@ -160,7 +160,7 @@
         Les tampons sont les plus inutiles des composants de portes fournis dans Logisim; leur présence dans la bibliothèque <b>Portes</b> est autant une question d'exhaustivité, un composant pour chaque table de vérité à une entrée possible, qu'une question de fonctionnalité utile. Néanmoins, il peut être occasionnellement utile de s'assurer que les valeurs se propagent dans une seule direction le long d'un fil ou pour ajouter un délai de transmission.
       </p>
       <h2>
-        Pins (en supposant que le composant est orienté vers l'est)
+        Broches (en supposant que le composant est orienté vers l'est)
       </h2>
 	  <div class="attliste">
       <dl>
