--- a/fr/html/libs/gates/controlled.html
+++ b/fr/html/libs/gates/controlled.html
@@ -217,7 +217,7 @@
         Les tampons contrôlés peuvent être utiles lorsque vous avez un fil (souvent appelé <em>bus</em>) dont la valeur doit correspondre à une des sorties de plusieurs composants. En plaçant un tampon contrôlé entre la sortie de chaque composant et le bus, vous pouvez contrôler si la sortie de ce composant est alimentée ou non sur le bus.
       </p>
       <h2>
-        Pins (en supposant que le composant est orienté vers l'est, la ligne de contrôle est à droite)
+        Broches (en supposant que le composant est orienté vers l'est, la ligne de contrôle est à droite)
       </h2>
 	  <div class="attliste">
       <dl>
