--- a/fr/html/libs/gates/not.html
+++ b/fr/html/libs/gates/not.html
@@ -144,7 +144,7 @@
         Une porte NON multibits effectuera la transformation ci-dessus par bit sur son entrée.
       </p>
       <h2>
-        Pins (en supposant que le composant est orienté vers l'est)
+        Broches (en supposant que le composant est orienté vers l'est)
       </h2>
 	  <div class="attliste">
       <dl>
