--- a/fr/html/libs/gates/pla.html
+++ b/fr/html/libs/gates/pla.html
@@ -53,7 +53,7 @@
 		Il existe dans la <b class="property">libririe Entrée/Sortie (extra)</b> un coposant PLA qui représente mieux le fonctionnement interne de ceux-ci.  
       </p>
 	  <h2>
-        Pins (en supposant que le composant est orienté vers l'est)
+        Broches (en supposant que le composant est orienté vers l'est)
       </h2>
 	  <div class="attliste">
       <dl>
