--- a/fr/html/libs/gates/xor.html
+++ b/fr/html/libs/gates/xor.html
@@ -432,7 +432,7 @@
        <b class="note">Note&nbsp;:</b> De nombreuses autorités affirment que le Comportement de la porte XOR formée devrait correspondre à la porte de parité impaire, mais il n'y a pas d'accord sur ce point. Le Comportement par défaut de Logisim pour les portes XOR est basé sur la norme IEEE 91. Il est également cohérent avec la signification intuitive que sous-tend le terme <em>ou exclusif</em>&nbsp;: Un serveur qui vous demande si vous voulez un accompagnement de purée de pommes de terre, de carottes, de pois ou de salade de chou n'accepte qu'un seul choix, et non trois, quoi qu'en disent certaines autorités. (Je dois cependant admettre que je n'ai pas soumis cette affirmation à un test rigoureux). Vous pouvez configurer les portes XOR et XNOR pour qu'elles utilisent la parité en modifiant son attribut <b class="property">Comportement multientrées</b>.
       </p>
       <h2>
-        Pins (en supposant que le composant est orienté vers l'est)
+        Broches (en supposant que le composant est orienté vers l'est)
       </h2>
 	  <div class="attliste">
       <dl>
