--- a/fr/html/libs/index.html
+++ b/fr/html/libs/index.html
@@ -631,7 +631,7 @@
               &nbsp;
             </td>
             <td>
-              <a href="io/joystick.html">Dip Switch</a>
+              <a href="io/joystick.html">Interrupteur Dip</a>
             </td>
           </tr>
           <tr>
@@ -642,7 +642,7 @@
               &nbsp;
             </td>
             <td>
-              <a href="io/joystick.html">Joystick</a>
+              <a href="io/joystick.html">Manette</a>
             </td>
           </tr>
           <tr>
