--- a/fr/html/libs/mem/counter.html
+++ b/fr/html/libs/mem/counter.html
@@ -189,7 +189,7 @@
         L'entrée <b>Clear</b> remet la valeur du compteur à 0 (tous à zero) de manière asynchrone, c'est-à-dire que tant que l'entrée <b>Clear</b> est à <b class="unov">1</b>, la valeur de sortie est fixée à 0, quelle que soit l'entrée de l'horloge.
       </p>
       <h2>
-        Pins
+        Broches
       </h2><img class="pinslib" src="../../../../img-libs/counterpins.png" alt="#########">
       <p>
         L'attribut <b class="property">Apparence</b> permet deux différents affichages pour ce composant. Logisim evolution présente les entrées à l'ouest et les sorties à l'est, je présente le pins du haut en bas et de l'ouest à l'est.
@@ -218,7 +218,7 @@
             Entrée Count&nbsp;: étiquette <var>G5</var>
           </dt>
           <dd>
-            Lorsque cette entrée est à <b class="unov">1</b> les évènements de l'horloge incrémentent ou décrémentent le compteur en accord avec l'état de la pin <b>UpDown</b>. Largeur de bit 1.
+            Lorsque cette entrée est à <b class="unov">1</b> les évènements de l'horloge incrémentent ou décrémentent le compteur en accord avec l'état de la broche <b>UpDown</b>. Largeur de bit 1.
           </dd>
           <dt class="lib">
             Entrée Clock&nbsp;: étiquette <var>2,3,5+/C6 2,4,5</var>
