--- a/fr/html/libs/mem/flipflops.html
+++ b/fr/html/libs/mem/flipflops.html
@@ -353,7 +353,7 @@
 		Il existe aussi les options <b class="vprop">Niveau bas</b>, pendant toute la durée où l'entrée de l'horloge est à <b class="zerov">0</b> et <b class="vprop">Niveau haut</b>, pendant toute la durée où l'entrée de l'horloge est à <b class="unov">1</b>. Ces deux dernières options de déclenchement ne sont pas disponibles pour les bascules T et J-K, car ces bascules se comportent de manière imprévisible lorsqu'on leur demande de basculer pendant une durée indéterminée.
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
       <p>
         Toutes les entrées ou sorties ont une largeur de bit de 1.
