--- a/fr/html/libs/mem/ram.html
+++ b/fr/html/libs/mem/ram.html
@@ -102,7 +102,7 @@
         Il existe d'autres réglages plus subtils, veuillez lire la description des broches et des propriétés si dessous pour plus de précision.
       </p>
       <h2>
-        Pins
+        Broches
       </h2><img class="pinslib" src="../../../../img-libs/rampins.png" alt="#########">
       <p>
         L'attribut <b class="property">Apparence</b> permet deux différentes images pour ce composant. Logisim Evolution présente les entrées à l'ouest et les sorties à l'est, je présente les pins du haut en bas et de l'ouest à l'est.
