--- a/fr/html/libs/mem/random.html
+++ b/fr/html/libs/mem/random.html
@@ -77,7 +77,7 @@
         La graine initiale est configurable par l'utilisateur. Si elle est configurée à 0 (ce qui est la valeur par défaut), la graine est basée sur l'heure actuelle ; lorsqu'on lui demande de se réinitialiser par l'entrée de <var>reset</var>, le composant calcule une nouvelle graine basée sur la nouvelle heure actuelle.
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
 	  <img class="pinslib" src="../../../../img-libs/randompins.png" alt="#########">
       <p>
