--- a/fr/html/libs/mem/register.html
+++ b/fr/html/libs/mem/register.html
@@ -72,7 +72,7 @@
 	    L'entrée de réinitialisation <var>R</var> remet la valeur du registre à <b class="zerov">0</b> de manière asynchrone, c'est-à-dire que tant que la réinitialisation est à <b class="unov">1</b>, la valeur est fixée à <b class="zerov">0</b>, quelle que soit l'entrée de l'horloge.
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
       <div class="attliste">
         <dl>
