--- a/fr/html/libs/mem/rom.html
+++ b/fr/html/libs/mem/rom.html
@@ -58,7 +58,7 @@
         Les valeurs actuelles sont affichées à l'intérieur de l'image du composant dans la zone grise. Les adresses affichées sont énumérées en gris à gauche de la zone d'affichage. À l'intérieur, chaque valeur est indiquée en hexadécimal. La valeur de l'adresse sélectionnée est affichée en texte inversé (blanc sur noir).
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
 	  </h2><img class="pinslib" src="../../../../img-libs/rompins.png" alt="#########">
       <p>
