--- a/fr/html/libs/obsolete/base/label.html
+++ b/fr/html/libs/obsolete/base/label.html
@@ -54,7 +54,7 @@
         Contrairement à tous les autres composants des bibliothèques intégrées actuelles, les composants d'étiquette peuvent être placés n'importe où sur le la zone de dessins. Ils ne s'alignent pas sur la grille.
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
       <p>
         Aucun.
