--- a/fr/html/libs/plexers/decoder.html
+++ b/fr/html/libs/plexers/decoder.html
@@ -51,7 +51,7 @@
 		Emet 1 sur exactement une sortie, celle-ci est déterminée par la valeur reçue par l'entrée sur le front sud.
       </p>
       <h2>
-        Pins (en supposant que le composant est orienté vers l'est)
+        Broches (en supposant que le composant est orienté vers l'est)
       </h2>
 	  <div class="attliste">
       <dl>
