--- a/fr/html/libs/plexers/demux.html
+++ b/fr/html/libs/plexers/demux.html
@@ -54,7 +54,7 @@
         Je trouve utile de considérer un démultiplexeur comme analogue à un aiguillage de chemin de fer, contrôlé par l'entrée sélection.
       </p>
       <h2>
-        Pins (en supposant que le composant est orienté vers l'est)
+        Broches (en supposant que le composant est orienté vers l'est)
       </h2>
 	  <div class="attliste">
       <dl>
