--- a/fr/html/libs/plexers/mux.html
+++ b/fr/html/libs/plexers/mux.html
@@ -51,7 +51,7 @@
         Copie une des entrées du bord ouest sur la sortie du bord est; l'entrée à copier est spécifiée par la valeur courante reçue par l'entrée de sélection du bord sud. Je trouve utile de considérer un multiplexeur comme l'analogue d'un aiguillage de chemin de fer, contrôlé par l'entrée sélection.
       </p>
       <h2>
-        Pins (en supposant que le composant est orienté vers l'est)
+        Broches (en supposant que le composant est orienté vers l'est)
       </h2>
 	  <div class="attliste">
       <dl>
