--- a/fr/html/libs/plexers/priencod.html
+++ b/fr/html/libs/plexers/priencod.html
@@ -60,7 +60,7 @@
         Une sortie supplémentaire de l'encodeur prioritaire est égale à  <b class="unov">1</b> chaque fois que l'encodeur prioritaire est activé et trouve un  <b class="unov">1</b> sur l'une des entrées indexées. Lors du chaînage d'encodeurs prioritaires, cette sortie peut être utilisée pour identifier lequel des encodeurs a été déclenché.
       </p>
       <h2>
-        Pins (en supposant que le composant est orienté vers l'est)
+        Broches (en supposant que le composant est orienté vers l'est)
       </h2>
       <dl>
         <dt class="lib">
