--- a/fr/html/libs/plexers/selector.html
+++ b/fr/html/libs/plexers/selector.html
@@ -56,7 +56,7 @@
 		Si un des bit de la donnée en entrée est indéterminé ou flottant (<b class="uvalue">U</b>) ou erreur (<b class="evalue">E</b>) alors le bit correspondant en sortie sera dans l'état indéterminé (<b class="uvalue">U</b>) ou erreur (<b class="evalue">E</b>)
       </p>
       <h2>
-        Pins (en supposant que le composant est orienté vers l'est)
+        Broches (en supposant que le composant est orienté vers l'est)
       </h2>
       <dl>
         <dt>
