--- a/fr/html/libs/wiring/clock.html
+++ b/fr/html/libs/wiring/clock.html
@@ -62,7 +62,7 @@
         <b class="note">Note</b>&nbsp;:La simulation des horloges par Logisim est assez irréaliste: dans des circuits réels, de multiples horloges dériveront les unes par rapport aux autres et ne fonctionnent jamais exactement au même rythme. Mais dans Logisim, toutes les horloges fonctionnent au même rythme.
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
       <p>
         Une horloge ne possède qu'une seule broche de un bit dont la valeur représentera l'état actuel de l'horloge. L'emplacement de cette broche est spécifié dans l'attribut <b class="property">Orientation</b>.<br>
