--- a/fr/html/libs/wiring/const01.html
+++ b/fr/html/libs/wiring/const01.html
@@ -68,7 +68,7 @@
         Ces composants ont des symboles standard en électroniques est c'est la seule raison de les préférer au composant plus polyvalent <a href="constant.html">Constante</a> qui peut fournir les mêmes fonctionnalités.
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
       <p>
         Un composant Alimentation ou Masse ne possède qu’une seule broche de sortie dont la largeur en bit correspond à l'attribut <b class="property">Largeur de donnée</b>.
