--- a/fr/html/libs/wiring/constant.html
+++ b/fr/html/libs/wiring/constant.html
@@ -53,7 +53,7 @@
         Génère constamment un état spécifié par son attribut <b class="property">Valeur</b>.
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
       <p>
         Un composant de Constante ne possède qu’une seule broche de sortie dont la largeur de donnée en bit correspond à l'attribut <b class="property">Largeur de donnée</b>.
