--- a/fr/html/libs/wiring/extender.html
+++ b/fr/html/libs/wiring/extender.html
@@ -63,7 +63,7 @@
         L'extenseur de bits modifie la largeur de donnée en bit d'une connexion. Si sa largeur est réduite, elle est simplement tronquée pour conserver les bits de poids le plus faible. Si sa largeur de donnée est augmentée, les bits de poids faible ne sont pas modifiés, et vous avez le choix pour les bits supplémentaires de poids fort&nbsp;: ils peuvent êtres soit tous à <b class="zerov">0</b> soit tous à <b class="unov">1</b> ou tous égale au <b class=vprop>bit de signe</b> (le bit le plus élevé de l'entrée) ou encore êtres déterminés par une entrée de commande supplémentaire.
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
 	  <div class="attliste">
       <dl>
