--- a/fr/html/libs/wiring/notconnect.html
+++ b/fr/html/libs/wiring/notconnect.html
@@ -51,7 +51,7 @@
         Génère constamment un état flottant (<b class="uvalue">U</b>) (haute impédance).
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
       <p>
         Un composant <b>Ne pas connecter</b> ne possède qu’une seule broche de sortie en son centre dont la largeur de donnée en bit correspond à l'attribut <b class="property">Largeur de donnée</b>.
