--- a/fr/html/libs/wiring/poweronreset.html
+++ b/fr/html/libs/wiring/poweronreset.html
@@ -53,7 +53,7 @@
         En mode pas-à-pas <b class="menu"> Menu Simulation | Simulation pas-à-pas </b> la transition aura lieu après le délai, mais en synchronisation avec l'appui de la touche (<b class="tkeybd">Ctrl-I </b>).
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
       <p>
         Ce composant ne possède qu'une seule broche de un bit dont la valeur représentera l'état actuel du reset. L'emplacement de cette broche est spécifié dans l'attribut <b class="property">Orientation</b>.
