--- a/fr/html/libs/wiring/pull.html
+++ b/fr/html/libs/wiring/pull.html
@@ -81,7 +81,7 @@
         S'il est connecté à une valeur à plusieurs bits, chaque bit de la valeur flottante est tiré dans la direction spécifiée, tandis que les bits non flottants restent inchangés.
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
       <p>
         La résistance a juste une broche, qui est une sortie et hérite de la largeur de donnée en bit du composant auquel il est connecté.
