--- a/fr/html/libs/wiring/transist.html
+++ b/fr/html/libs/wiring/transist.html
@@ -534,7 +534,7 @@
         Un transistor de type N se comporte de manière très similaire à un <a href="../gates/controlled.html">buffer contrôlé</a> . La principale différence est qu'un transistor est destiné à des conceptions de circuits plus élémentaires.
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
       <p>
         Ce composant possède trois broches, deux sont en entrée <b class=vprop>Source</b> et <b class=vprop>Gate</b> et une en sortie <b class=vprop>Drain</b>
