--- a/fr/html/libs/wiring/transmis.html
+++ b/fr/html/libs/wiring/transmis.html
@@ -181,7 +181,7 @@
         Si l'attribut <b class="property">Largeur de donnée</b> est supérieur à 1, l'entrée <b>gate</b> est toujours d'un seul bit, mais sa valeur est appliquée simultanément à chacun des bits de l'entrée <b>source</b> .
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
       <p>
         Ce composant possède quatre broches, trois sont des entrées <b class=vprop>Source</b>,<b class=vprop>P-gate</b>,<b class=vprop>N-gate</b> une est une sortie <b class=vprop>Drain</b> que vous pouvez observer sur la figure plus haut.
