--- a/libstatus.html
+++ b/libstatus.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html lang="fr">
  <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -1015,7 +1016,7 @@
 		<td align="left">Button</td>
 		<td align="left"></td>
 		<td align="center" class="good"><a href="./en/html/libs/io/button.html">_V</a></td>
-		<td align="center" class="nonexist"><a href="./fr/html/libs/io/button.html">__</a></td>
+		<td align="center" class="good"><a href="./fr/html/libs/io/button.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/io/button.html">__</a></td>
 		<td align="center" class="needtask"><a href="./pt/html/libs/io/button.html">__</a></td>
 		<td align="center" class="needtask"><a href="./ru/html/libs/io/button.html">__</a></td>
@@ -1032,7 +1033,7 @@
 		<td align="left">DIP Switch</td>
 		<td align="left"></td>
 		<td align="center" class="good"><a href="./en/html/libs/io/dipswitch.html">_V</a></td>
-		<td align="center" class="nonexist"><a href="./fr/html/libs/io/dipswitch.html">__</a></td>
+		<td align="center" class="good"><a href="./fr/html/libs/io/dipswitch.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/io/dipswitch.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/libs/io/dipswitch.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./ru/html/libs/io/dipswitch.html">__</a></td>
@@ -1049,7 +1050,7 @@
 		<td align="left">Joystick</td>
 		<td align="left"></td>
 		<td align="center" class="good"><a href="./en/html/libs/io/joystick.html">_V</a></td>
-		<td align="center" class="nonexist"><a href="./fr/html/libs/io/joystick.html">__</a></td>
+		<td align="center" class="good"><a href="./fr/html/libs/io/joystick.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/io/joystick.html">__</a></td>
 		<td align="center" class="needtask"><a href="./pt/html/libs/io/joystick.html">__</a></td>
 		<td align="center" class="needtask"><a href="./ru/html/libs/io/joystick.html">__</a></td>
@@ -1066,7 +1067,7 @@
 		<td align="left">Keyboard</td>
 		<td align="left"></td>
 		<td align="center" class="good"><a href="./en/html/libs/io/keyboard.html">_V</a></td>
-		<td align="center" class="nonexist"><a href="./fr/html/libs/io/keyboard.html">__</a></td>
+		<td align="center" class="good"><a href="./fr/html/libs/io/keyboard.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/io/keyboard.html">__</a></td>
 		<td align="center" class="needtask"><a href="./pt/html/libs/io/keyboard.html">__</a></td>
 		<td align="center" class="needtask"><a href="./ru/html/libs/io/keyboard.html">__</a></td>
