--- a/fr/html/libs/arith/adder.html
+++ b/fr/html/libs/arith/adder.html
@@ -55,7 +55,7 @@
         Si l'une des valeurs contient des bits flottants ou des bits d'erreur, le composant effectuera une addition partielle. C'est-à-dire qu'il calculera autant de bits de poids faible que possible. Mais au-dessus du bit flottant ou d'erreur, le résultat aura des bits flottants ou d'erreur. 
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
 	  <div class="attliste">
       <dl>
