--- a/fr/html/libs/arith/fpinttofp.html
+++ b/fr/html/libs/arith/fpinttofp.html
@@ -52,7 +52,7 @@
 Il dispose d'une sortie d'erreur au sud, qui est mise à <b class="unov">1</b> si le composant reçoit un signal error (<b class="evalue">E</b>) ou undefined(<b class="uvalue">U</b>).
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
 	  <div class="attliste">
       <dl>
