--- a/fr/html/libs/arith/fpnegator.html
+++ b/fr/html/libs/arith/fpnegator.html
@@ -51,7 +51,7 @@
         Le composant inverseur renvoie une valeur à virgule flottante de signe opposé a la valeur à virgule flottante d'entrée. Si les données d'entrée contiennent des signaux non définis (<b class="uvalue">U</b>), d'erreur (<b class="evalue">E</b>) ou la valeur <var>NaN<sub>f</sub></var>, il émettra sur la sortie la valeur <var>NaN<sub>f</sub></var> et sur la sortie d'erreur au sud un <b class="unov">1</b>
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
       <div class="attliste">
         <dl>
