--- a/fr/html/libs/arith/fpsubtractor.html
+++ b/fr/html/libs/arith/fpsubtractor.html
@@ -52,7 +52,7 @@
         Si les données d'entrée contiennent des signaux non définis (<b class="uvalue">U</b>), d'erreur (<b class="evalue">E</b>) ou la valeur <var>NaN<sub>f</sub></var>, il émettra sur la sortie la valeur <var>NaN<sub>f</sub></var> et sur la sortie d'erreur au sud un <b class="unov">1</b>
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
       <div class="attliste">
         <dl>
