--- a/fr/html/libs/mem/shiftreg.html
+++ b/fr/html/libs/mem/shiftreg.html
@@ -67,7 +67,7 @@
         L'entrée <var>Clear</var> réinitialise tous les étages à 0 de manière asynchrone, c'est-à-dire que tant que l'entrée <var>Clear</var> est à <b class="unov">1</b>, toutes les valeurs sont mises à <b class="zerov">0</b>, quelle que soit l'entrée d'horloge.
       </p>
       <h2>
-        Pins
+        Broches
       </h2><img class="pinslib" src="../../../../img-libs/shiftpins.png" alt="#########">
       <p>
         L'attribut <b class="property">Apparence</b> permet deux différents affichages pour ce composant. Logisim Evolution présente les entrées à l'ouest et les sorties à l'est, je présente les pins du haut en bas et de l'ouest à l'est.<br>
