--- a/fr/html/libs/wiring/probe.html
+++ b/fr/html/libs/wiring/probe.html
@@ -77,13 +77,13 @@
         Une sonde est un élément qui affiche simplement la valeur à un point donné dans un circuit. Il n'interagit pas avec d'autres composants.
       </p>
       <p>
-        À bien des égards, le composant de sonde duplique la fonctionnalité trouvée dans un composant <a href="pin.html">broche</a> configurée en tant que pin de sortie. La sonde présente cependant certaines différences&nbsp;:<br>
+        À bien des égards, le composant de sonde duplique la fonctionnalité trouvée dans un composant <a href="pin.html">broche</a> configurée en tant que broche de sortie. La sonde présente cependant certaines différences&nbsp;:<br>
         - Elle n'est pas considérée comme une sortie par un circuit de hiérarchie supérieur.<br>
         - Elle n’a pas d’attribut <b class="property">Largeur de donnée</b> à configurer, la largeur de donnée en bit est déduite de la valeur qu’elle trouve sur son entrée.<br>
         - Graphiquement sa bordure est plus fine et grise.
       </p>
       <h2>
-        Pins
+        Broches
       </h2>
       <p>
         Un composant de sonde ne possède qu’une seule broche, qui servira d’entrée à la sonde. La largeur de donnée acceptée par cette broche est adaptative: la sonde s'adaptera aux entrées de toute largeur.
