--- a/en/html/libs/io/led.html
+++ b/en/html/libs/io/led.html
@@ -112,6 +112,12 @@
           <dd>
             The color with which to draw the label.
           </dd>
+		  <dt class="lib">
+            Label Visible
+          </dt>
+          <dd>
+            Determines whether the label is visible or not.
+          </dd>
         </dl>
         <h2>
           Poke Tool Behavior
